# XSimpleMedia

./: README.md
0.2/: CMakeLists.txt  YouTubeStyleManager.h  main.cpp
0.3/: CMakeLists.txt  TagButton.h  ThumbnailDelegate.cpp  VideoDetailWidget.cpp  VideoDetailWidget.h  YouTubeStyleManager.cpp  YouTubeStyleManager.h
0.4/: FfmpegUtil.cpp  FfmpegUtil.h  TagButton.h  VideoDetailWidget.cpp  VideoDetailWidget.h  YouTubeStyleManager.cpp  YouTubeStyleManager.h  main.cpp
0.6/: CMakeLists.txt  FfmpegUtil.cpp  FfmpegUtil.h  VideoDetailWidget.h  YouTubeStyleManager.cpp  YouTubeStyleManager.h  main.cpp
0.7/: CMakeLists.txt  VideoDetailWidget.cpp  YouTubeStyleManager.cpp  YouTubeStyleManager.h  resources.qrc
1.0/: FfmpegUtil.cpp  ThumbnailDelegate.cpp  ThumbnailDelegate.h  YouTubeStyleManager.cpp
1.0.1/: VideoDetailWidget.cpp  VideoDetailWidget.h  YouTubeStyleManager.h  main.cpp
